# bevy_image_segmentation

./: Cargo.toml  README.md
examples/: 3d-scene-with-internal-target.rs  3d-scene.rs  headless_renderer.rs
src/: capture_plugin.rs  lib.rs  main.rs  plugin.rs
src/components/: mod.rs
src/resources/: camera_table.rs  mod.rs  object_table.rs
src/utils/: image_copy.rs  mod.rs
